# Assignment

Assignment_june15/: .gitignore  CMakeLists.txt  CMakePresets.json
Assignment_june15/include/: car.h  hyundai.h  maruti.h  tata.h
Assignment_june15/src/: hyundai.cpp  maruti.cpp  tata.cpp  test_car.cpp  testmain.cpp
assignment/: .gitignore  CMakeLists.txt  CMakePresets.json
assignment/src/: pipelineMain.cpp
